# DataMaker-Qt5

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/libs/: DataMaker.h  DataMakerFromText.h
src/views/MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
